# code-packager

./: .gitignore  LICENSE  README.md  README_CN.md  USAGE.md  pyproject.toml
.trae/rules/: project_rules.md
src/code_cleaner_py/: exclude_patterns.txt  main.py
src/code_packager/: __main__.py  cli.py  comment_processor.py  config.py  exclude_patterns.conf  exclude_patterns.txt  file_filter.py  main.py  packager.py  utils.py
src/code_packager/presets/: basic.conf  complete.conf  git-friendly.conf  lightweight.conf
tests/: test_docstring_removal.py
