[project]
name = "code-packager"
version = "0.1.0"
description = "Easily zip your codebase while excluding unnecessary files like a pro! Say goodbye to bloated archives and hello to clean, lightweight packages. 🎉"
authors = [
    {name = "DealiAxy", email = "dealiaxy@gmail.com"},
]
dependencies = ["loguru>=0.7.3", "pathspec>=0.12.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
